fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,10 @@
     --panache-purple-transparent: rgba(114, 0, 255, 0.25);
 }
 
-html, body { overflow-x: hidden; }
+body { overflow-x: hidden; }
 
 ::selection { background-color: var(--panache-purple); color: white; }
-
-section { position: relative; overflow: hidden; }
+section { position: relative; }
 
 .text-pnc { color: var(--panache-purple); }
 
@@ -34,13 +33,13 @@ section { position: relative; overflow: hidden; }
 .icon { height: 1.25em; width: auto; }
 .icon-lg { height: 1.75em; width: auto; }
 
-.blur-bg { position: relative; overflow: hidden; }
+
+.blur-bg { position: relative; }
 
 .scroll-animate {
     opacity: 0;
     transform: translate3d(0, 0, 0);
     position: relative;
-    overflow: hidden;
 }
 
 .scroll-animate.animate__animated {
@@ -63,7 +62,6 @@ section { position: relative; overflow: hidden; }
     width: 100%;
     max-width: 150px;
     aspect-ratio: 1;
-    overflow: hidden;
 }
 
 .cover-pnc {
@@ -71,7 +69,6 @@ section { position: relative; overflow: hidden; }
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden;
 }
 
 .glass-card {
@@ -80,5 +77,4 @@ section { position: relative; overflow: hidden; }
     position: relative;
     mask-image: linear-gradient(to bottom, black 80%, transparent 150%);
     -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
-    overflow: hidden;
 }
